--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
     "info": {
         "name": "CP-Judge",
-        "version": "incomplete",
+        "version": "alpha",
         "author": "hungg261"
     },
 
